# langchain-application-template

./: README.md  cookiecutter.json  pyproject.toml  pytest.ini
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_prompt.py
tests/: conftest.py  test_cookiecutter.py
{{ cookiecutter.project_slug }}/: .env.template  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/app/: main.py
{{ cookiecutter.project_slug }}/app/chain/: __init__.py  chain.py  model.py  prompt.py
{{ cookiecutter.project_slug }}/app/internal/: __init__.py  lifespan.py
{{ cookiecutter.project_slug }}/app/internal/llm/: __init__.py  chain.py  model.py
{{ cookiecutter.project_slug }}/app/models/: __init__.py  chat_request.py  chat_response.py  message.py  messages.py  request_message.py
{{ cookiecutter.project_slug }}/app/routers/: __init__.py  chat.py
{{ cookiecutter.project_slug }}/scripts/: dev.sh  prod.sh
{{ cookiecutter.project_slug }}/tests/models/: test_chat_request.py  test_chat_response.py  test_message.py  test_messages.py  test_request_message.py
