[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "langchain>=0.3.13",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
